# Pembelajaran-mesin-UAP

./: README.md  app.py  pyproject.toml  uap.ipynb
.devcontainer/: devcontainer.json
Wed wisata/: .pdm-python  requirements.txt  tokenizer.joblib
